# AqMD3-Acquisition-Console

./: .gitignore  CMakeLists.txt  CMakePresets.json  THIRD_PARTY_LICENSE.txt  vcpkg.json
AqMD3_cli/: CMakeLists.txt
AqMD3_cli/include/visa/: visainterface.h
AqMD3_cli/src/: aqmd3_cli.cpp
AqMD3_cli/src/visa/: visainterface.cpp
AqMD3_console/: CMakeLists.txt
AqMD3_console/include/: definitions.h  zmqacquireddatasubscriber.h
AqMD3_console/include/server/: publisher.h  server.h  server_zmq.h
AqMD3_console/src/: aqmd3_console.cpp  zmqacquireddatasubscriber.cpp
AqMD3_console/src/server/: server_zmq.cpp
UIMFWriter/: CMakeLists.txt
core/: CMakeLists.txt
core/include/: acquirepublisher.h  acquisitioncontrol.h  acquisitioncontroller.h  acquisitionpublisher.h  processsubject.h  uimfframewritersubscriber.h  zmqacquireddatasubscriber.h
core/include/acquisition/: acquisitioncontrol.h  streamreader.h
core/include/diagnostic/: datageneratorcontext.h
core/include/mass_spec/: toftiminginformation.h
core/include/pubsub/: subscriber.h
core/include/uimf/: uimfacquisitionrecord.h
core/src/: acquirepublisher.cpp  acquisitioncontroller.cpp  processsubject.cpp  uimfframewritersubscriber.cpp
core/src/acquisition/: streamreader.cpp
core/src/massspec/: toftiminginformation.cpp
core/src/server/: server.cpp
core/src/uimf/: uimfacquisitionrecord.cpp
libaqmd3/: CMakeLists.txt
libaqmd3/include/libaqmd3/: acquireddata.h  acquisitionbuffer.h  acquisitionbufferpool.h  cstcontext.h  cstzs1context.h  digitizer.h  helpers.h  streamingcontext.h
libaqmd3/include/libaqmd3/devicevalues/: deviceconstants.h  digitizerconfigurabletype.h
libaqmd3/include/libaqmd3/digitizers/: sa220.h  sa220p.h
libaqmd3/src/: acquireddata.cpp  acquisitionbuffer.cpp  acquisitionbufferpool.cpp  cstcontext.cpp  cstzs1context.cpp  digitizer.cpp  helpers.cpp  streamingcontext.cpp
libaqmd3/src/digitizers/: sa220.cpp  sa220p.cpp
